--- a/src/styles/Weather.css
+++ b/src/styles/Weather.css
@@ -16,12 +16,18 @@
     border: 1px solid rgba(255, 255, 255, 0.3); 
     display: flex;
     flex-direction: column;
+    text-align: center;
     width: 400px;
     height: auto;
     border-radius: 15px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
-    padding: 40px;
+    padding: 20px;
     color: #ffffff;
+}
+
+.weather-box h1{
+    margin-bottom: 20px;
+    color: #FFF100;
 }
 
 .search-bar {
